--- a/public/offline.html
+++ b/public/offline.html
@@ -7,23 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo192.png" />
   <title>mobile login counter</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <script>
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker.register("./serviceWorker.js")
-          .then(register => console.log(register.scope))
-          .catch(error => console.error(error))
-      })
-    }
-  </script>
+  <div id="root">
+    <div class="container">
+      <h2>
+        Please go online to use the Mobile Login Counter App
+      </h2>
+    </div>
+  </div>
 </body>
 
 </html>
