--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo192.png" />
   <title>mobile login counter</title>
 </head>
 
