--- a/public/offline.html
+++ b/public/offline.html
@@ -8,16 +8,52 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>mobile login counter</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing: border-box;
+    }
+
+    #root,
+    main {
+      height: 100%;
+    }
+
+    #root .container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      height: 100%;
+      width: 260px;
+      margin: auto;
+      text-align: center;
+    }
+  </style>
 </head>
+
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
-    <div class="container">
-      <h2>
-        Please go online to use the Mobile Login Counter App
-      </h2>
-    </div>
+    <main>
+      <div class="container">
+        <svg width='120' height='120' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22 22'>
+          <path
+            d='m11.00102 1033.3622a8.00033 8.00031 0 0 0 -8.00102 8.001 8.00033 8.00031 0 0 0 8.00102 7.999 8.00033 8.00031 0 0 0 7.99898 -7.999 8.00033 8.00031 0 0 0 -7.99898 -8.001m-2.783 3.938c.674 0 1.22.548 1.22 1.222 0 .675-.546 1.22-1.22 1.22-.675 0-1.222-.545-1.222-1.22 0-.675.548-1.222 1.222-1.222m5.54 0c.674 0 1.22.548 1.22 1.222 0 .675-.546 1.22-1.22 1.22-.675 0-1.222-.545-1.222-1.22 0-.675.548-1.222 1.222-1.222m-2.759 4.657c1.987 0 3.759 1.13 4.516 2.881.13.3-.007.648-.306.777-.299.13-.648-.011-.777-.308-.57-1.318-1.917-2.169-3.432-2.169-1.55 0-2.906.85-3.453 2.167-.094.228-.315.365-.547.365-.076 0-.152-.015-.227-.045-.302-.125-.444-.472-.318-.773.731-1.76 2.515-2.896 4.544-2.896'
+            fill='#1c87c9' fill-rule='evenodd' transform='translate(0-1030.36)' />
+        </svg>
+        <h2>
+          Please go online to use <br />the Mobile Login Counter App
+        </h2>
+      </div>
+    </main>
   </div>
 </body>
 
